--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "bugs": {
     "url": "https://github.com/raphamorim/angularjs-best-examples/issues"
   },
-  "homepage": "https://github.com/raphamorim/angularjs-best-examples"
+  "homepage": "https://github.com/raphamorim/angularjs-best-examples",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.4.0"
+  }
 }
